--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ JWT_SECRET_KEY=@$%^&*()_+Tuannc
 JWT_EXPIRES_IN=1y
 TWILIO_ACCOUNT_SID = AC1fa2f5f52cdb06e2983eb837c1d0b457
 TWILIO_AUTH_TOKEN = 589a1b6e504f2c3b4f366f966ff86e53
+WEATHER_LINK=https://api.openweathermap.org/data/2.5/weather
+WEATHER_KEY=36d678e636fdbd574a17a6ecdcc181b4
+GOONGMAP_KEY=awKDV9ATAVWbDgvNYjF4nEocbx8tklFogLapXXXO
+MOONGMAP_LINK=https://rsapi.goong.io
