--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@goongmaps/goong-sdk": "^1.0.7",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.1.1",
@@ -33,6 +34,7 @@
     "@nestjs/platform-socket.io": "^10.2.3",
     "@nestjs/swagger": "^7.1.10",
     "@nestjs/websockets": "^10.2.3",
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
