--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.12.0",
+    "@fastify/view": "^8.2.0",
     "@goongmaps/goong-sdk": "^1.0.7",
     "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.0.0",
@@ -32,6 +34,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^10.2.2",
     "@nestjs/platform-socket.io": "^10.2.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.10",
     "@nestjs/websockets": "^10.2.3",
     "axios": "^1.6.0",
@@ -39,6 +42,8 @@
     "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
